--- a/src/DbSchemas.Service/wwwroot/index.html
+++ b/src/DbSchemas.Service/wwwroot/index.html
@@ -7,7 +7,7 @@
 </head>
 <script>
   localStorage.removeItem("apiServer");
-    localStorage.setItem("apiServer","http://10.0.107.22:8088/");
+    localStorage.setItem("apiServer",window.location.origin+'/');
 </script>
 <body>
   <div id="app"></div>
